# NicheLM

./: .env.example  .gitignore  LICENSE  Makefile  README.md  make.ps1  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
data/: __init__.py  _common.py  build_eval_dataset.py  build_train_dataset.py  inspect.py  quality_check.py  schema.sql  seed.py
eval/: __init__.py  metrics.py  run_baselines.py  run_eval.py
eval/results/: baselines.md  baselines.smoke.md
serve/: Modelfile  __init__.py  server.py
tests/: test_dataset.py  test_metrics.py
tests/fixtures/: mini_ecom.sqlite-schema  mini_eval.jsonl  mini_train.jsonl
train/: __init__.py  train.py
train/configs/: default.yaml
